--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,66 @@
-h1 {
-  text-align: center;
+body {
+  background-color: rgb(40, 40, 40);
+  font-family: "Rubik", sans-serif;
+  color: rgb(255, 255, 255);
 }
 
-footer {
-  text-align: center;
+h1 {
+  font-weight: 500;
+}
+
+select {
+  padding: 10px;
+  margin-top: 20px;
+  width: 90%;
+  border-radius: 6px;
+  display: block;
+  margin: 0 auto 40px;
+}
+
+.world-clock {
+  background: linear-gradient(150deg, rgb(60, 60, 60) 0%, rgb(27, 27, 27) 100%);
+  box-shadow: inset 0px 5px 7px 2px rgba(95, 95, 95, 0.5),
+    inset 0px -5px 7px 2px rgba(0, 0, 0, 0.5), -7px -7px 10px rgba(0, 0, 0, 0);
+  border: none;
+  border-radius: 20px;
+  display: block;
+  margin: 50px auto;
+  padding: 20px;
+  height: 600px;
+  width: 400px;
+}
+
+.head {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 20px 10px 20px;
+}
+
+.city-block {
+  border: none;
+  border-radius: 10px;
+  background: linear-gradient(150deg, rgb(60, 60, 60) 0%, rgb(27, 27, 27) 100%);
+  box-shadow: inset 0px 3px 6px 1px rgba(95, 95, 95, 0.5),
+    inset 0px -3px 6px 1px rgba(0, 0, 0, 0.5), -7px -7px 10px rgba(0, 0, 0, 0);
+  padding: 20px;
+  margin: 10px;
+  display: flex;
+  justify-content: space-between;
+  height: 70px;
+}
+
+.city {
+  font-size: 28px;
+  font-weight: 500;
+  line-height: 1.5;
+}
+
+.date {
+  font-size: 14px;
+  font-weight: 200;
+}
+
+.time {
+  font-size: 30px;
+  font-weight: 500;
 }
