--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@ body {
   background-color: rgb(40, 40, 40);
   font-family: "Rubik", sans-serif;
   color: rgb(255, 255, 255);
+  text-shadow: #000000 1px 0 15px;
 }
 
 h1 {
@@ -9,6 +10,12 @@ h1 {
 }
 
 select {
+  background-color: #2c2c2c;
+  border: none;
+  box-shadow: -4px -5px 8px rgba(77, 77, 77, 0.5) inset,
+    4px 5px 8px rgba(9, 9, 9, 0.4) inset;
+  color: #ffffff;
+  font-family: "Rubik", sans-serif;
   padding: 10px;
   margin-top: 20px;
   width: 90%;
@@ -17,14 +24,31 @@ select {
   margin: 0 auto 40px;
 }
 
+footer {
+  color: #666666;
+  font-size: 12px;
+  text-align: center;
+  font-style: italic;
+  margin-top: 55px;
+  text-shadow: none;
+}
+
+.footer-links {
+  opacity: 100%;
+  color: #767676;
+  font-weight: 500;
+}
+
 .world-clock {
   background: linear-gradient(150deg, rgb(60, 60, 60) 0%, rgb(27, 27, 27) 100%);
   box-shadow: inset 0px 5px 7px 2px rgba(95, 95, 95, 0.5),
-    inset 0px -5px 7px 2px rgba(0, 0, 0, 0.5), -7px -7px 10px rgba(0, 0, 0, 0);
+    inset 0px -5px 7px 2px rgba(0, 0, 0, 0.5),
+    5px 8px 40px 20px rgb(0, 0, 0, 0.4);
   border: none;
   border-radius: 20px;
   display: block;
   margin: 50px auto;
+  margin-top: 60px;
   padding: 20px;
   height: 600px;
   width: 400px;
@@ -63,4 +87,9 @@ select {
 .time {
   font-size: 30px;
   font-weight: 500;
+}
+
+.time small {
+  font-size: 15px;
+  margin-left: -3px;
 }
